Fix merge conflict in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-fastapi
-uvicorn
-<<<<<<< HEAD
+flask
+gunicorn
 requests
-sqlalchemy
-=======
-httpx
-sqlalchemy
-pydantic
->>>>>>> 1a5d991645014bfafd0087e836585a6455805ddd
-python-dotenv
