--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
-fastapi
-uvicorn
-sqlalchemy
-pydantic
-python-dotenv
+# Core FastAPI dependencies
+fastapi==0.115.2
+uvicorn[standard]==0.32.0
+
+# Database and ORM
+sqlalchemy==2.0.35
+
+# Environment variables
+python-dotenv==1.0.1
+
+# Data validation
+pydantic==2.9.2
+pydantic-settings==2.4.0
+
+# HTTP requests (if your bot sends/receives API calls)
+httpx==0.27.2
+requests==2.32.3
+
+# Optional (if you use async database or background tasks)
+aiosqlite==0.20.0
