--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ sqlalchemy==2.0.35
 # Environment variables
 python-dotenv==1.0.1
 
+pydantic-settings==2.4.0
+
 # Data validation
 pydantic==2.9.2
 pydantic-settings==2.4.0
